--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-midnight
-description: Documention for DigitalSaucepan Apps
+#theme: jekyll-theme-midnight
+#description: Documention for DigitalSaucepan Apps
