rename folder, add titles

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
+title: Apps by Digital Saucepan
 #theme: jekyll-theme-midnight
-#description: Documention for DigitalSaucepan Apps
+description: Documention for DigitalSaucepan Apps
