--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Apps by Digital Saucepan
-theme: jekyll-theme-midnight
+title: Apps by DigitalSaucepan
+#theme: jekyll-theme-midnight
 description: Documention for DigitalSaucepan Apps
